lab2/Q4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-vh-routing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: watch.ecom-store.com
    http:
      paths:
      - backend:
          service: 
            name: video-service
            port:
              number: 8080
        pathType: Prefix
        path: /video
  - host: apparels.ecom-store.com
    http: 
      paths: 
      - backend:
          service:
            name: apparels-service
            port: 
              number: 8080
        pathType: Prefix
        path: /wear
